public folder changed

--- a/public/index.html
+++ b/public/index.html
@@ -313,9 +313,7 @@
                               </li>
                             </ul>
                           </div>
-                          <p class="card-text text-center text-1000 px-4">I love semangatkoding, easy platform to
-                            use,fantasic
-                            staff and nothing but great results!</p>
+                          <p class="card-text text-center text-1000 px-4">ulasan</p>
                         </div>
                       </div>
                     </div>
@@ -367,9 +365,7 @@
                               </li>
                             </ul>
                           </div>
-                          <p class="card-text text-center text-1000 px-4">I love semangatkoding, easy platform to
-                            use,fantasic
-                            staff and nothing but great results!</p>
+                          <p class="card-text text-center text-1000 px-4">ulasan</p>
                         </div>
                       </div>
                     </div>
@@ -421,8 +417,7 @@
                               </li>
                             </ul>
                           </div>
-                          <p class="card-text text-center text-1000 px-4">I love Jobest, easy platform to use,fantasic
-                            staff and nothing but great results!</p>
+                          <p class="card-text text-center text-1000 px-4">ulasan</p>
                         </div>
                       </div>
                     </div>
